use flex to avoid text overlap

--- a/pombola/south_africa/static/sass/_south-africa_overrides.scss
+++ b/pombola/south_africa/static/sass/_south-africa_overrides.scss
@@ -1172,7 +1172,6 @@ $logo-width-large: 184px;
                     font-size: 0.95em;
                     line-height: 1.4;
                     letter-spacing: 0.01em;
-                    width: 95%;
                 }
                 &:hover {
                     background-color: hsla(0, 0%, 100%, 0.05);
@@ -1225,11 +1224,26 @@ $logo-width-large: 184px;
             }
             .dropdown-link__wrapper {
                 position: relative;
+                border-radius: 0.3em;
+                &:hover {
+                    background-color: hsla(0, 0%, 100%, 0.05);
+                    color: #fff;
+                }
+                .dropdown-link {
+                    &:hover {
+                        background-color: transparent;
+                        color: #fff;
+                    }
+                }
+            }
+            .text-wrapper {
+                display: flex;
+                justify-content: space-between;
             }
             .dropdown-link__info {
-                position: absolute;
+                position: relative;
                 left: auto;
-                top: 0%;
+                top: 25%;
                 right: 0%;
                 bottom: 0%;
                 z-index: 1;
